test/extern/ferguson/invalid-types.good
invalid-types.chpl:5: error: mismatched type for 'arr' when calling 'myFunc'
invalid-types.chpl:9: note: function called here
note: check that the argument types match the C function signature
